# supabase-file-manager

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.jsx  storage.js  styles.css  supabase.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
